The beginnings of a combat page
Imported box assets; combat page design & the CombatDirector

--- a/Scratch/Assembly-CSharp-vs.csproj
+++ b/Scratch/Assembly-CSharp-vs.csproj
@@ -46,6 +46,7 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\CombatDirector.cs" />
      <Compile Include="Assets\Creep.cs" />
      <Compile Include="Assets\CreepLibrary.cs" />
      <Compile Include="Assets\Director.cs" />
